AB#25858 feat: fix wpbody margin overrides causing overlap design issues

--- a/frontend/src/admin/style.css
+++ b/frontend/src/admin/style.css
@@ -90,16 +90,8 @@
   }
 }
 
-#wpbody {
-  @apply mt-0;
-}
-
 .update-nag {
   @apply hidden;
-}
-
-.toplevel_page_kiriminaja .wp-first-item {
-  @apply hidden!;
 }
 
 @layer components {
